--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 		<slf4j.version>1.6.6</slf4j.version>
 		<log4j.version>1.2.12</log4j.version>
 		<spring.version>4.3.9.RELEASE</spring.version>
+		<java.version>1.8</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
